--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@
     {q: "Sabah kalkınca yaptığım ilk şey nedir?", a: "Telefona bakmak", options: ["Kahve yapmak", "Diş fırçalamak", "Telefona bakmak", "Yüz yıkamak"]},
     {q: "Hayalimdeki meslek nedir?", a: "3D Tasarımcısı", options: ["Doktor", "Avukat", "3D Tasarımcısı", "Yazılımcı"]},
     {q: "Gece mi gündüz mü insanıyım?", a: "Gece", options: ["Gündüz", "Gece", "Sabah kuşu", "Öğleci"]},
-    {q: "Beni en çok ne sinirlendirir?", a: "Yalan söylemesi", options: ["Geç kalmak", "Sessizlik", "Yalan söylemesi", "Soru sorması"]},
+    {q: "Beni en çok ne sinirlendirir?", a: "Birinin bana yalan söylemesi", options: ["Birinin bana Dokunması", "Çok Ses", "Birinin bana yalan söylemesi", "Çok Soru sorulması"]},
     {q: "En çok kullandığım kelime/emoji nedir?", a: "Şehit", options: ["LOL", "😂", "Şehit", "❤️"]},
-    {q: "Küçükken bana ne derlerdi?", a: "Uzaylı", options: ["Cin", "Dombili", "Uzaylı", "Fındık"]},
+    {q: "Küçükken bana takılan lakap?", a: "Uzaylı", options: ["Cin", "Dombili", "Uzaylı", "Fındık"]},
     {q: "Hakkında en çok bilgi sahibi olduğum konu nedir?", a: "Zombi İstilası", options: ["Uzay", "Orta Çağ", "Zombi İstilası", "Yapay Zeka"]},
     {q: "Hangisi benimle daha çok özdeşleşir?", a: "Kod yazmak", options: ["Balık tutmak", "Kod yazmak", "Borsa takip etmek", "Araba yarışı"]},
     {q: "Hangisi benim ilgimi çeker?", a: "Hacker kültürü", options: ["Moda", "Bahçıvanlık", "Hacker kültürü", "Seramik"]}
