--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
           userAnswers.map(a =>
             `Soru: ${a.q}\nSeçilen cevap: ${a.selected} (${a.isCorrect ? "Doğru" : "Yanlış"})\n`
           ).join("\n"),
-        email: "firatdelice6@gmail.com"
+        email: "sinemferda2@gmail.com"
       })
     });
   }
