--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
     }, 800);
 
     // Mail gönder (Formspree örneği, kendi endpoint'inle değiştir)
-    fetch("https://formspree.io/f/xqkrwwze", {
+    fetch("https://formspree.io/f/xjkrpqqz", {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({
